Finished the Discussion section draft

--- a/case-studies.tex
+++ b/case-studies.tex
@@ -11,31 +11,31 @@ Scottish Gaelic (G\`aidhlig is the autonym) is a Celtic language spoken by rough
 
 The 2011 Scottish Census indicates that out of the total amount of Gaelic speakers, only around half - 32,191 person to be exact - read and write in Gaelic.\footnote{\href{http://www.scotlandscensus.gov.uk/}{http://www.scotlandscensus.gov.uk/. Last accessed April~27, 2018.}} 6,218 speak and read the language, but do not write it, while 4,646 can read it, but don't speak or write it. Gaelic officially is not a national language, although it is afforded certain protections under the European Charter for Regional or Minority Languages\footnote{\href{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148}{https://www.coe.int/en/web/conventions/full-list/-/conventions/treaty/148. Last accessed April~27, 2018.}} (although, as this is an EU charter, it is unclear whether Britain will continue to ratify it following their impending exit from the European Union). The Gaelic Language (Scotland) Act of 2005 (GLS) gave Gaelic official status as an official language of Scotland\footnote{\href{http://www.legislation.gov.uk/asp/2005/7}{http://www.legislation.gov.uk/asp/2005/7. Last accessed April~27, 2018.}}, and set up the B\`ord na G\`aidhlig\footnote{\href{http://www.gaidhlig.scot/}{http://www.gaidhlig.scot/. Last accessed April~27, 2018.}} as a language developmental body tasked with protecting and vitalising the Gaelic language.
 
-The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/. Last accessed April~27, 2018.}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en. Last accessed April~27, 2018.}}, the largest corpus project for Gaelic, but don't specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/. Last accessed April~27, 2018.}} on Skye; educational material from the B\`ord is mainly focused in these areas. 
+The B\`ord officially is tasked with promoting and facilitating educational materials, but the initial charter makes no mention of language technology. The National Gaelic Language Plan 2018-2023\footnote{\href{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/}{http://www.gaidhlig.scot/launch-of-the-new-national-gaelic-language-plan/. Last accessed April~27, 2018.}} \citep{bord2018national} mention the Digital Archive of Scottish Gaelic (DASG)\footnote{\href{http://dasg.ac.uk/en}{http://dasg.ac.uk/en. Last accessed April~27, 2018.}}, the largest corpus project for Gaelic, but don't specify other language technology being developed (excepting a brief mention of working with Ireland and Nova Scotia developing shared technology and resources. There are some primary and secondary schools, as well as various Gaelic Language and Studies degrees at English-speaking universities, as well as one Gaelic-speaking university Sabhal M\`or Ostaig\footnote{\href{http://www.smo.uhi.ac.uk/en/}{http://www.smo.uhi.ac.uk/en/. Last accessed April~27, 2018.}} on Skye; educational material from the B\`ord is mainly focused in these areas.
 
 \subsubsection{Language Vitality Status}
 
-Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla. Last accessed April~27, 2018.}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html. Last accessed April~27, 2018.}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049. Last accessed April~27, 2018.}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citet{kornai2013digital}'s rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}} 
+Gaelic has an EGIDS rating of 2, as it is a provincial language given the 2005 GLS Act.\footnote{\href{https://www.ethnologue.com/language/gla}{https://www.ethnologue.com/language/gla. Last accessed April~27, 2018.}}  \citet{lewis2009ethnologue} notes regarding language use that "Resurgence of interest in Scottish Gaelic in 1990s. A number of children learn the language but there are serious problems in language maintenance even in the core areas \citep{salminen2007endangered}. Home, church, community." UNESCO judges it to be {\it definitely endangered}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-iso-gla.html. Last accessed April~27, 2018.}} The Endangered Languages Project describes it as Threatened or Vulnerable, depending on the source,\footnote{\href{http://endangeredlanguages.com/lang/3049}{http://endangeredlanguages.com/lang/3049. Last accessed April~27, 2018.}} as \citet{salminen2007europe} gives a much smaller population number of 20k for speakers than the other census-based data. \citet{kornai2013digital}'s rating declares it as {\it Living}.\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}}
 
 \subsubsection{Language Resources}
 \label{subsec:gaelic-resources}
 
 Gaelic has a long, written history. Today, there are a plethora of written, audio, and video resources. Some of these have been bundled into linguistic corpora. The DASG is the largest corpus for Gaelic available on the web; however, it is not permissively licensed for modification, distribution, or reproduction, and so cannot be considered open source (although it is open access).\footnote{\href{http://dasg.ac.uk/about/terms/en}{http://dasg.ac.uk/about/terms/en. Last accessed April~27, 2018.}} OLAC has 26 resources for Gaelic, including large multilingual corpora, as well.\footnote{\href{http://www.language-archives.org/language/gla}{http://www.language-archives.org/language/gla. Last accessed April~27, 2018.}} A large corpus compiled by An Crub\'ad\'an project is available online \footnote{\href{http://crubadan.org/languages/gd}{http://crubadan.org/languages/gd. Last accessed April~27, 2018.}} \citep{scannell2007crubadan}. WALS has 61 typological features listed for Gaelic\footnote{\href{http://wals.info/languoid/lect/wals_code_gae}{http://wals.info/languoid/lect/wals\_code\_gae. Last accessed April~27, 2018.}}, and Glottolog 35 references.\footnote{\href{http://glottolog.org/resource/languoid/id/scot1245}{http://glottolog.org/resource/languoid/id/scot1245. Last accessed April~27, 2018.}} ODIN has 59 IGT entries for Scottish Gaelic.\footnote{\href{http://odin.linguistlist.org/}{http://odin.linguistlist.org/. Last accessed April~27, 2018.}}
 
-Some of these corpora are annotated - for instance, the Annotated Reference Corpus of Scottish Gaelic (ARCOSG)\footnote{\href{https://datashare.is.ed.ac.uk/handle/10283/2011}{https://datashare.is.ed.ac.uk/handle/10283/2011. Last accessed April~27, 2018.}} \citep{ARCOSG2016, lamb2014scottish}, which used an Irish POS tagger \citep{ui2006part} to project annotations, and which was funded by the B\`ord na G\`aighlig. This resource was used to automatically derive categorial grammars \citep{batchelor2016automatic}, and to develop POS taggers directly for Gaelic \citep{lamb2014developing}. A dependcy-structure corpus is being developed \citep{batchelor2014gdbank}, as are word-embedding models \citep{lamb2016developing}. The source code for \citet{batchelor2014gdbank, batchelor2016automatic} is available on GitHub.\footnote{\href{https://github.com/colinbatchelor/gdbank/}{https://github.com/colinbatchelor/gdbank/. Last accessed April~27, 2018.}} Some of these papers were presented at the first Celtic Language Technology Workshop in Dublin in 2014. The amount of resources show clearly that Gaelic is not entirely on the fringe of academic research, although it is generally considered a low resource language. 
+Some of these corpora are annotated - for instance, the Annotated Reference Corpus of Scottish Gaelic (ARCOSG)\footnote{\href{https://datashare.is.ed.ac.uk/handle/10283/2011}{https://datashare.is.ed.ac.uk/handle/10283/2011. Last accessed April~27, 2018.}} \citep{ARCOSG2016, lamb2014scottish}, which used an Irish POS tagger \citep{ui2006part} to project annotations, and which was funded by the B\`ord na G\`aighlig. This resource was used to automatically derive categorial grammars \citep{batchelor2016automatic}, and to develop POS taggers directly for Gaelic \citep{lamb2014developing}. A dependcy-structure corpus is being developed \citep{batchelor2014gdbank}, as are word-embedding models \citep{lamb2016developing}. The source code for \citet{batchelor2014gdbank, batchelor2016automatic} is available on GitHub.\footnote{\href{https://github.com/colinbatchelor/gdbank/}{https://github.com/colinbatchelor/gdbank/. Last accessed April~27, 2018.}} Some of these papers were presented at the first Celtic Language Technology Workshop in Dublin in 2014. The amount of resources show clearly that Gaelic is not entirely on the fringe of academic research, although it is generally considered a low resource language.
 
-The Cr\'ubad\'an corpus was used to create an open source Hunspell spellchecker\footnote{\href{https://github.com/kscanne/hunspell-gd }{https://github.com/kscanne/hunspell-gd . Last accessed April~27, 2018.}}\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd} is probably derivative. Last accessed April~27, 2018}, which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/. Last accessed April~27, 2018.}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/. Last accessed April~27, 2018.}}, and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/. Last accessed April~27, 2018.}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb. Last accessed April~27, 2018.}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About. Last accessed April~27, 2018.}} 
- (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}} 
- 
+The Cr\'ubad\'an corpus was used to create an open source Hunspell spellchecker\footnote{\href{https://github.com/kscanne/hunspell-gd }{https://github.com/kscanne/hunspell-gd . Last accessed April~27, 2018.}}\footnote{\href{https://github.com/gooselinux/hunspell-gd}{https://github.com/gooselinux/hunspell-gd} is probably derivative. Last accessed April~27, 2018}, which is the spellchecker for "LibreOffice, OpenOffice.org, Mozilla Firefox 3 and Thunderbird, Google Chrome, and it is also used by proprietary software packages, like macOS, InDesign, memoQ, Opera and SDL Trados."\footnote{\href{https://hunspell.github.io/}{https://hunspell.github.io/. Last accessed April~27, 2018.}} This spellchecker was built with the help of Michael Bauer, an independent Gaelic technologist who runs a small Gaelic technology consultancy called Am Faclair Beag\footnote{\href{http://www.faclair.com/}{http://www.faclair.com/. Last accessed April~27, 2018.}}, and also has ports for OpenOffice directly\footnote{\href{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/}{https://addons.mozilla.org/ga-IE/firefox/addon/scottish-gaelic-spell-checker/. Last accessed April~27, 2018.}} and a Firefox extension.\footnote{\href{https://extensions.openoffice.org/en/project/faclair-afb}{https://extensions.openoffice.org/en/project/faclair-afb. Last accessed April~27, 2018.}} An Faclair Beag also offers an online dictionary with over 85k words\footnote{\href{http://www.faclair.com/GaelicDictionaryAbout.html\#About}{http://www.faclair.com/GaelicDictionaryAbout.html\#About. Last accessed April~27, 2018.}}
+ (and almost a million forms\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}}) and in inbuilt lemmatizer.\footnote{\href{http://www.faclair.com/News.html}{http://www.faclair.com/News.html. Last accessed April~27, 2018.}}
+
  More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh. Last accessed April~27, 2018.}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/. Last accessed April~27, 2018.}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
- 
+
 Navigating resources to identify what is open source and what isn't is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php. Last accessed April~27, 2018.}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?offset=20&query=Gaelic}{http://linghub.org/search/?offset=20\&query=Gaelic. Last accessed April~27, 2018.}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic. Last accessed April~27, 2018.}}, although it is unclear if these are for Irish.
 
-The best resource is arguably Kornai's lab page\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}} (again, in development). While not linking directly, it does give some information. It notes that there are: several language packs at the OS level for Ubuntu and Windows input, but not one for Mac, probably because Gaelic uses the Roman alphabet and a UK keyboard suffices for most needs;\footnote{I use the US International Keyboard with OSX to type Gaelic accents, myself, and have never needed another keyboard layout for this} a large Wikipedia; a Hunspell checker; OLAC texts (with marginally out of date numbers); a large Cr\'ubad\'an corpus (1,541,302 words and 17,308 documents), as well as a large Indigenous Tweets corpus with half a million words; and general coverage in Omniglot,\footnote{\href{http://omniglot.com/writing/gaelic.htm}{http://omniglot.com/writing/gaelic.htm. Last accessed April~27, 2018.}} bible.org,\footnote{\href{https://bible.org/}{https://bible.org/. Last accessed April~27, 2018.}} Panlex,\footnote{\href{https://panlex.org/}{https://panlex.org/. Last accessed April~27, 2018.}} and the Leipzig corpora \citep{goldhahn2012building}.\footnote{\href{http://wortschatz.uni-leipzig.de/en/download/}{http://wortschatz.uni-leipzig.de/en/download/. Last accessed April~27, 2018.}} Some of the stats are dubious. For instance, 15k wikipedia users seems odd for a language where there a total population of 30k literate speakers; and it is in WALS, quite clearly. However, in general, this gives a better overview than any other source. 
+The best resource is arguably Kornai's lab page\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656. Last accessed April~27, 2018.}} (again, in development). While not linking directly, it does give some information. It notes that there are: several language packs at the OS level for Ubuntu and Windows input, but not one for Mac, probably because Gaelic uses the Roman alphabet and a UK keyboard suffices for most needs;\footnote{I use the US International Keyboard with OSX to type Gaelic accents, myself, and have never needed another keyboard layout for this} a large Wikipedia; a Hunspell checker; OLAC texts (with marginally out of date numbers); a large Cr\'ubad\'an corpus (1,541,302 words and 17,308 documents), as well as a large Indigenous Tweets corpus with half a million words; and general coverage in Omniglot,\footnote{\href{http://omniglot.com/writing/gaelic.htm}{http://omniglot.com/writing/gaelic.htm. Last accessed April~27, 2018.}} bible.org,\footnote{\href{https://bible.org/}{https://bible.org/. Last accessed April~27, 2018.}} Panlex,\footnote{\href{https://panlex.org/}{https://panlex.org/. Last accessed April~27, 2018.}} and the Leipzig corpora \citep{goldhahn2012building}.\footnote{\href{http://wortschatz.uni-leipzig.de/en/download/}{http://wortschatz.uni-leipzig.de/en/download/. Last accessed April~27, 2018.}} Some of the stats are dubious. For instance, 15k wikipedia users seems odd for a language where there a total population of 30k literate speakers; and it is in WALS, quite clearly. However, in general, this gives a better overview than any other source.
 
-As far as I am aware, the highest amount of code resources for Gaelic which are directly linked and open source is the corpus described in Section~\ref{sec:solutions}. There are six resources mentioned in the list\footnote{\href{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic}{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic. Last accessed April~27, 2018.}}, which was largely sourced by manually inspecting each of the GitHub repositories mentioning "Gaelic", and also through personal curation during general research for this paper. 
+As far as I am aware, the highest amount of code resources for Gaelic which are directly linked and open source is the corpus described in Section~\ref{sec:solutions}. There are six resources mentioned in the list\footnote{\href{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic}{https://github.com/RichardLitt/low-resource-languages\#scottish-gaelic. Last accessed April~27, 2018.}}, which was largely sourced by manually inspecting each of the GitHub repositories mentioning "Gaelic", and also through personal curation during general research for this paper.
 
-Ideally, researchers would start to open source more of their code involving Gaelic. However, there are so few researchers and language communities currently working on Gaelic HLT that this may be a na\"{i}ve wish; indeed, the main researcher over the past decade for Gaelic releases most of his code publicly; that is, Kevin Scannell of \citet{scannell2007crubadan}. And his focus is mainly on Irish. One solution would be to implement a Scottish Gaelic computational linguistics course at one of the major Scottish universities, such as the University of Edinburgh, Glasgow, St. Andrews, or potentially at Sabhal M\`or Ostaig. This option would reward further study. 
+Ideally, researchers would start to open source more of their code involving Gaelic. However, there are so few researchers and language communities currently working on Gaelic HLT that this may be a na\"{i}ve wish; indeed, the main researcher over the past decade for Gaelic releases most of his code publicly; that is, Kevin Scannell of \citet{scannell2007crubadan}. And his focus is mainly on Irish. One solution would be to implement a Scottish Gaelic computational linguistics course at one of the major Scottish universities, such as the University of Edinburgh, Glasgow, St. Andrews, or potentially at Sabhal M\`or Ostaig. This option would reward further study.
 
 % TODO Mention Scannell's pooling paper
 % TODO Mention Salt on a shoestring
@@ -43,7 +43,7 @@ Ideally, researchers would start to open source more of their code involving Gae
 \subsection{Naskapi}
 \label{sec:naskapi}
 
-In October 2017 I travelled to Kawawachikamach and interviewed linguists working on a Naskapi bible, visited the school and talked to teachers at length about language efforts there, and talked to individual Naskapi speakers about their thoughts on the language and how it is used. Below, I give a brief overview of Naskapi, note how it would be rated according the metrics covered in Section~\ref{subsec:metrics}, and discuss language resource development. \citet{jancewicz2002applied} is the main source of published information on Naskapi computational developments; I give an update, 15 years on, given my experience in Kawawachikamach. I was unfortunately unable to meet Bill Jancewicz, the SIL missionary there, at that time. 
+In October 2017 I travelled to Kawawachikamach and interviewed linguists working on a Naskapi bible, visited the school and talked to teachers at length about language efforts there, and talked to individual Naskapi speakers about their thoughts on the language and how it is used. Below, I give a brief overview of Naskapi, note how it would be rated according the metrics covered in Section~\ref{subsec:metrics}, and discuss language resource development. \citet{jancewicz2002applied} is the main source of published information on Naskapi computational developments; I give an update, 15 years on, given my experience in Kawawachikamach. I was unfortunately unable to meet Bill Jancewicz, the SIL missionary there, at that time.
 
 \subsubsection{Language Background}
 \label{sec:naskapi-language-background}
@@ -57,13 +57,13 @@ All of the Naskapi speak their own language regularly, in all contexts - excepti
 
 
 \subsubsection{Language Vitality Status}
-\label{sec:naskapi-vitality-status}. 
+\label{sec:naskapi-vitality-status}.
 
-\citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html. Last accessed April~27, 2018.}} \citet{kornai2013digital}'s digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651. Last accessed April~27, 2018.}} Naskapi does not appear at all on the Endangered Languages Project. 
+\citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk . Last accessed April~27, 2018.}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html. Last accessed April~27, 2018.}} \citet{kornai2013digital}'s digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651. Last accessed April~27, 2018.}} Naskapi does not appear at all on the Endangered Languages Project.
 
 The {\it dead} terminology used to describe Naskapi by \citet{kornai2013digital}'s metric reflects the metric's being only applied to online corpora (which is minimal), and, regardless of the insensitivity of the nomenclature, it does have some merit here. When looking at the resources listed on the resource, there are no language packs for software, no Wikipedia articles, no Hunspell, no primary texts listed in OLAC, only 2415 words listed in the Cr\'ubad\'an corpus, no Indigenous tweets, no Swadesh lists, and only a brief mention in Panlex translations (90 words), and in Omniglot. Once again the data may not be perfect - this source lists the EGIDS rating at Level 5 (which I would disagree with, placing it in back in Level 4, as "The language is in vigorous use, with standardisation and literature being sustained through a widespread system of institutionally supported education.")
 
-ODIN has exactly one IGT entry for Naskapi, from \citep{richards2004syntax}. This means that noting the translation in Example~\ref{igt1} may may double the size of ODIN's entries, although it is not the first entry in the literature (this lexeme is mentioned in \citet{macKenzie1980towards}).\footnote{This might also be transliterated as `wabush`, although it would not match the Naskapi phonological inventory. Wabush is the name of a town in Labrador, which I was told meant `hare' or `rabbit', and my pronunciation was not corrected.} 
+ODIN has exactly one IGT entry for Naskapi, from \citep{richards2004syntax}. This means that noting the translation in Example~\ref{igt1} may may double the size of ODIN's entries, although it is not the first entry in the literature (this lexeme is mentioned in \citet{macKenzie1980towards}).\footnote{This might also be transliterated as `wabush`, although it would not match the Naskapi phonological inventory. Wabush is the name of a town in Labrador, which I was told meant `hare' or `rabbit', and my pronunciation was not corrected.}
 
 \begin{exe}
 \ex
@@ -73,12 +73,12 @@ hare\\
 \label{igt1}
 \end{exe}
 
-Regardless of this paucity of data, there are certainly literary resources in Naskapi (see the next section) - if not many digitally. In the case of Naskapi, the {\it Emergent} level proposed by \citet{gibson2016assessing} may be more fitting than either {\it Dead} or {\it Vital}. 
+Regardless of this paucity of data, there are certainly literary resources in Naskapi (see the next section) - if not many digitally. In the case of Naskapi, the {\it Emergent} level proposed by \citet{gibson2016assessing} may be more fitting than either {\it Dead} or {\it Vital}.
 
 \subsubsection{Language resources and developments}
-Naskapi has two scripts; both Latin, and the Unified Canadian Aboriginal Syllabics, which were added to Unicode in 1999.\footnote{\href{https://www.unicode.org/standard/supported.html}{https://www.unicode.org/standard/supported.html. Last accessed April~27, 2018.}} The Syllabics were introduced by missionaries in the 19th century, and quickly adopted by all Cree language communities, who approached near universal literacy \citep{bennett1991cree}. In Kawawachikamach and Schefferville (and on the train there), there are many examples of writing in syllabics. 
+Naskapi has two scripts; both Latin, and the Unified Canadian Aboriginal Syllabics, which were added to Unicode in 1999.\footnote{\href{https://www.unicode.org/standard/supported.html}{https://www.unicode.org/standard/supported.html. Last accessed April~27, 2018.}} The Syllabics were introduced by missionaries in the 19th century, and quickly adopted by all Cree language communities, who approached near universal literacy \citep{bennett1991cree}. In Kawawachikamach and Schefferville (and on the train there), there are many examples of writing in syllabics.
 
-\citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often weren't involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper (MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi), as he and his wife were the first two missionaries sent from SIL to the Naskapi community, and as they worked with the Band Office installing the first word processing system for syllabics, training Naskapi speakers, creating the first Naskapi TrueType font, and helping to release Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/. Last accessed April~27, 2018.}} "a keyboarding utility now ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp. Last accessed April~27, 2018.}} Indeed, the importance of Jancewicz's support to Naskapi digital ascendancy cannot be understated (except, perhaps, by Jancewicz himself): 
+\citet{jancewicz2002applied} gives an insightful overview of computational technology in Naskapi. They note that Naskapi often weren't involved in typesetting literature in syllabics, and that few became typists when the first syllabic typewriters were introduced. Jancewicz is particularly well placed as the author of this paper (MacKenzie is also, as she has worked for decades with Cree communities as well as with the Naskapi), as he and his wife were the first two missionaries sent from SIL to the Naskapi community, and as they worked with the Band Office installing the first word processing system for syllabics, training Naskapi speakers, creating the first Naskapi TrueType font, and helping to release Keyman,\footnote{\href{https://keyman.com/}{https://keyman.com/. Last accessed April~27, 2018.}} "a keyboarding utility now ... that allowed the programming of custom keyboard input for various languages and character sets." \citep[85]{jancewicz2002applied} Keyman is now free, open source software available on GitHub.\footnote{\href{https://github.com/keymanapp}{https://github.com/keymanapp. Last accessed April~27, 2018.}} Indeed, the importance of Jancewicz's support to Naskapi digital ascendancy cannot be understated (except, perhaps, by Jancewicz himself):
 
 \begin{quote}
 "Since 1988, the resident linguist has maintained all of his own language learning materials and language data on computer. He has also provided the local technical support that is needed in a small, isolated community, especially with regard to the esoteric development of computer programs that allow syllabic word processing. While it is not impossible to use computers in Native language work without a full-time, on- site computer resource person, it has been an obvious asset to have such a person available to provide training and technical support." \citep[86]{jancewicz2002applied}
@@ -109,7 +109,7 @@ All told, computational work that is easily accessible on the web is exceedingly
 
 While FLEx is open source, none of the linguists edit the code for it or use the codebase, depending on SIL International to keep the product up to date. Keyman is likewise not edited, although it is installed on local computers. The Naskapi community website, run by the Naskapi Nation of Kawawachikamach, does have a webpage on installing syllabics,\footnote{\href{http://www.naskapi.ca/en/Install-syllabics}{http://www.naskapi.ca/en/Install-syllabics. Last accessed April~27, 2018.}} which may be useful for some speakers.
 
-\citet{jancewicz2002applied} was written before wide adoption of the Unicode standard by browsers, and before the now omnipresent ubiquity of the internet and smartphones. Unfortunately, the situation for Naskapi does not appear to have changed; a small group of external linguists provide much of the language resources for the community. 
+\citet{jancewicz2002applied} was written before wide adoption of the Unicode standard by browsers, and before the now omnipresent ubiquity of the internet and smartphones. Unfortunately, the situation for Naskapi does not appear to have changed; a small group of external linguists provide much of the language resources for the community.
 
 \begin{quote}
 "The authors hope that the dichotomy between "resource people" and "aboriginal people" reflected in the section headings above would become less and less distinct. ... As a growing number of local people gain experience and expertise to become their own resource persons, such a dichotomy will dissolve, and all the vital resources for language development will exist at a community level. However, until this ideal is realised, small language communities such as these must continue to identify and avail themselves of professional and academic resources found outside their communities." \citep[89]{jancewicz2002applied}
@@ -117,4 +117,8 @@ While FLEx is open source, none of the linguists edit the code for it or use the
 
 This remains just as true, fifteen years on. There is work which could be done; for instance, moving the siloed dictionary efforts into the public web, and using bilingual texts from the Band Office to bootstrap corpora, POS taggers, spellcheckers (there isn't a Hunspell yet), and perhaps MT systems. However, this work would need to be matched by on-the-ground work by local community members - and, as \citet[90]{jancewicz2002applied} finally notes: "The initial learning curve is sometimes steep, but there is no substitute for hands-on experience."
 
+Open source is less of a concern for Naskapi as is general software; the community is so small that any code is liable to made by community members and open sourced, anyway. However, the tools which the linguists use to develop languages benefit from open source. Any SIL missionary can contribute to FLEx, which means that incremental changes in different communities can be folded back into work in Naskapi. Likewise, any work done on Cree or any related languages can be applied or projected onto Naskapi more easily if it is open source. Open source isn't a {\it sine qua non} for Naskapi technological development, then; but it is surely a benefit.
+
 % TODO Ask Bill for a copy of his MA thesis "Grammar enhanced biliteracy: Naskapi language structures for facilitating reading in Naskapi"
+
+% TODO Mention
