--- a/future-work.tex
+++ b/future-work.tex
@@ -2,7 +2,7 @@
 \section{Future Work}
 \label{sec:future-work}
 
-Here, I'll talk about where to go next.
+This thesis, a cursory look at open source and low resource languages, has highlighted more than a few directions for future research. I cover some of these below.
 
 \subsection{Beyond Wikipedia and Ethnologue}
 
