--- a/discussion.tex
+++ b/discussion.tex
@@ -4,11 +4,18 @@
 
 So: how can the open source methodology for software development low resource languages?
 
-\subsection{Why isn't more code open?}
+The most blatant advantage of open source is that any code developed is in the public domain; anyone can access and use it. This frees up communities to work on their own code, and leads to language developers being able to improve their languages' tech without searching for large amounts of funding, or depending on collaboration with universities or enterprises which may have different incentives and timelines. By contributing to the digital commons, it is possible to raise the quality of code for everyone, and a rising tide lifts all boats.
 
-Finally, I'll go into a little detail on the question of why more hasn't been open sourced, and how to find open source resources.
+As \citet{streiter2006implementing} recommends, open source can also generate a shared community of researchers interested in maintaining a pool of resources. Open source can also enforce changes to be in the open, thus allowing community members to contribute to similar code. The social aspect of shared code should not be overlooked, as it allows newcomers to learn how to work with technology, and helps offload continued work from a few hardcore NLP practitioners. The more coders are available within an ecosystem, the more code in that system can be developed and ultimately used - if it is open sourced.
+
+As was clear from looking at Gaelic, open source code widely leads to accessibility and for language resource generation. The difficulty of finding resources doesn't mean that there aren't any at the governmental, military, or enterprise level. However, what resources have been found have generally been open source; it is because Scannell and Bauer work largely with open source licensing that their work has been able to complement each other's and to build tooling around Gaelic resources. Hopefully, this trend will continue.
+
+On a more broad level, open source can certainly help language development for other LRLs through educational materials. Currently, software developers in the tens of thousands are learning how to code using open source tooling on GitHub. NLTK is one of the most popular projects on GitHub, and with almost a thousand citations on Google Scholar,\footnote{\href{https://scholar.google.ca/scholar?q=NLTK}{https://scholar.google.ca/scholar?q=NLTK. Last accessed April~27, 2018.}}, it is popular with academics, too. Open source has allowed it to thrive. Students using it may go on to use its tooling for their own languages; and, as more digital natives learn to code and as more languages find their own language communities online, it is hoped that more languages will digitally ascend.
+
+% I covered this enough. I would just be repeating myself.
+% \subsection{Why isn't more code open?}
+% Finally, I'll go into a little detail on the question of why more hasn't been open sourced, and how to find open source resources.
 % - Longevity of linguistic scholarship and work
 
-\subsection{How does open source demonstrably help?}
-
-I'll talk about use cases where open source has actually helped languages. This will include, for instance, NLTK case studies.
+% No need for a subsection; that's the entire point of this chapter.
+% \subsection{How does open source demonstrably help?}
